--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Ben Rudhart                                
+your_name                                 : Ben & Beat
 your_link                                 : 
 your_city                                 : 
 email_address                             : support@hoerbaer.app
@@ -38,77 +38,60 @@ mastodon_link                             :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
-    fontawesome_icon_name                 : magic
-    
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
+  - title                                 : Personalized Kids' Recommendations
+    description                           : Rich onboarding tailors HörBär to your child's age and interests so every shelf feels handpicked.
+    fontawesome_icon_name                 : child
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
+  - title                                 : 5k+ Audio Dramas via Apple Music
+    description                           : Enjoy thousands of kid-friendly audio dramas that are already part of your Apple Music subscription.
+    fontawesome_icon_name                 : music
+
+  - title                                 : Continue Listening & Favorites
+    description                           : Pick up stories where you left off and build a favorites grid your kids can tap to start the next adventure instantly.
+    fontawesome_icon_name                 : heart
+
+  - title                                 : New Episode Alerts
+    description                           : HörBär watches your saved series and pings you the moment a fresh episode drops.
+    fontawesome_icon_name                 : bell
+
+  - title                                 : Kid-Safe Search & Categories
+    description                           : Smart filters surface only child-appropriate series and group them into intuitive categories parents can trust.
+    fontawesome_icon_name                 : search
+
+  - title                                 : Mini and Fullscreen Player
+    description                           : Simple controls, animated feedback, and a quick track list keep listening smooth for kids and parents alike.
     fontawesome_icon_name                 : play-circle
-
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
-    fontawesome_icon_name                 : sync
-
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : adjust
-  
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : star
-
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
-    fontawesome_icon_name                 : arrow-alt-circle-down
-
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : link
-
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
-
-  - title                                 : # New Feature Title
-    description                           : # New Feature Description
-    fontawesome_icon_name                 : # Enter Font Awesome icon name (e.g. star). Find icons on fontawesome.com/icons.
-
 
 
 # Theme Settings
-topbar_color                              : "#000000"
-topbar_transparency                       : 0.1
+topbar_color                              : "#49678B"
+topbar_transparency                       : 0.0
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#363b3d"
-cover_overlay_transparency                : 0.8
+cover_overlay_color                       : "#2B3F5C"
+cover_overlay_transparency                : 0.65
 
-device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
+device_color                              : blue                                      # Set to: blue, black, yellow, coral or white.
 
-body_background_color                     : "#ffffff"
+body_background_color                     : "#F7FAFF"
 
-link_color                                : "#1d63ea"
+link_color                                : "#49678B"
 
-app_title_color                           : "#ffffff"
-app_price_color                           : "#ffffff"
-app_description_color                     : "#ffffff"
+app_title_color                           : "#FFFFFF"
+app_price_color                           : "#F1F5FB"
+app_description_color                     : "#E8F0FA"
 
-feature_title_color                       : "#000000"
-feature_text_color                        : "#666666"
+feature_title_color                       : "#1E2A3B"
+feature_text_color                        : "#3C4A60"
 
-feature_icons_foreground_color            : "#1d63ea"
-feature_icons_background_color            : "#e6e6e6"
+feature_icons_foreground_color            : "#73A3DD"
+feature_icons_background_color            : "#D8E0EA"
 
-social_icons_foreground_color             : "#666666"
-social_icons_background_color             : "#e6e6e6"
+social_icons_foreground_color             : "#49678B"
+social_icons_background_color             : "#D8E0EA"
 
-footer_text_color                         : "#666666"
+footer_text_color                         : "#3C4A60"
 
 
 
