--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,20 @@
 #page title
 page_title                                : HörBär - Hörspiel-App für Kinder         # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+url                                       : https://hoerbaer.app
 
 # App Info
 ios_app_id                                : 6748903433                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 ios_app_country                           : de                                        # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 
-appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
+appstore_link                             : https://apps.apple.com/de/app/h%C3%B6rb%C3%A4r-h%C3%B6rspiele-f%C3%BCr-kinder/id6748903433  # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
 presskit_download_link                    : https://benrudhart.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 : # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : 
+app_icon                                  : assets/app-icon-fallback.png             # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_name                                  : HörBär                                    # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_price                                 : Im App Store ansehen                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_description                           : HörBär hilft Familien, schnell passende und kindgerechte Hörspiele in Apple Music zu finden und nahtlos weiterzuhören.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -42,8 +43,8 @@ features                                  :
     description                           : HörBär passt sich an Alter und Interessen deines Kindes an, damit ihr immer die Hörspiele findet, die ihr liebt.
     fontawesome_icon_name                 : child
 
-  - title                                 : Über 5.000 Hörspiele via Apple Music
-    description                           : Greife auf tausende kindgerechte Hörspielserien zu, die bereits in deinem Apple-Music-Abo enthalten sind. Spare bares Geld 💰!
+  - title                                 : Tausende Hörspiele via Apple Music
+    description                           : Greife auf tausende kindgerechte Hörspiele in Apple Music zu - ohne zusätzlichen Hörspiel-Dienst.
     fontawesome_icon_name                 : music
 
   - title                                 : Weiterspielen & Favoriten
@@ -59,7 +60,7 @@ features                                  :
     fontawesome_icon_name                 : search
 
   - title                                 : Mini- und Vollbild-Player
-    description                           : Einfache Steuerung, animiertes Feedback und die automatische Kaptielerkennung sorgen für entspanntes Hören bei Klein und Groß.
+    description                           : Einfache Steuerung, animiertes Feedback und die automatische Kapitelerkennung sorgen für entspanntes Hören bei Klein und Groß.
     fontawesome_icon_name                 : play-circle
 
 
