Fix language picker

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -3,6 +3,7 @@ de:
   meta_description: "HörBär hilft Familien, schnell passende und kindgerechte Hörspiele in Apple Music zu finden und nahtlos weiterzuhören."
   hero_headline: "HörBär"
   hero_subline: "Kindgerechte Hörspiele in Apple Music entdecken, sicher auswählen und Folge für Folge entspannt weiterhören."
+  app_price: "Im App Store ansehen"
   cta_note: "Direkt im App Store verfügbar."
   app_icon_alt: "HörBär App-Icon"
   screenshot_alt: "Screenshot der HörBär-App"
@@ -41,6 +42,7 @@ en:
   meta_description: "HoerBaer helps families find child-safe audio dramas in Apple Music and continue listening seamlessly."
   hero_headline: "HoerBaer"
   hero_subline: "Discover child-safe audio dramas in Apple Music, pick content with confidence, and continue story by story."
+  app_price: "View on the App Store"
   cta_note: "Available on the App Store."
   app_icon_alt: "HoerBaer app icon"
   screenshot_alt: "Screenshot of the HoerBaer app"
@@ -69,7 +71,7 @@ en:
   footer:
     built_by: "Built by"
     changelog: "Changelog"
-    privacy: "Privacy Policy (DE)"
-    terms: "Terms (DE)"
+    privacy: "Privacy Policy (German)"
+    terms: "Terms (German)"
     legal_note: "Legal notice"
     switch_language: "Deutsch"
