--- a/_config.yml
+++ b/_config.yml
@@ -64,19 +64,19 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#49678B"
+topbar_color                              : "#D5751C"
 topbar_transparency                       : 0.0
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#2B3F5C"
-cover_overlay_transparency                : 0.65
+cover_overlay_color                       : "#5A3A1E"
+cover_overlay_transparency                : 0.45
 
 device_color                              : yellow                                     # Set to: blue, black, yellow, coral or white.
 
-body_background_color                     : "#F7FAFF"
+body_background_color                     : "#FFF9F2"
 
-link_color                                : "#49678B"
+link_color                                : "#D5751C"
 
 app_title_color                           : "#FFFFFF"
 app_price_color                           : "#F1F5FB"
@@ -85,11 +85,11 @@ app_description_color                     : "#E8F0FA"
 feature_title_color                       : "#1E2A3B"
 feature_text_color                        : "#3C4A60"
 
-feature_icons_foreground_color            : "#73A3DD"
-feature_icons_background_color            : "#D8E0EA"
+feature_icons_foreground_color            : "#D5751C"
+feature_icons_background_color            : "#F8D8B6"
 
-social_icons_foreground_color             : "#49678B"
-social_icons_background_color             : "#D8E0EA"
+social_icons_foreground_color             : "#D5751C"
+social_icons_background_color             : "#F8D8B6"
 
 footer_text_color                         : "#3C4A60"
 
