Verbessere Home Beschreibungstexte

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -1,10 +1,9 @@
 de:
   page_title: "HörBär - Hörspiel-App für Kinder"
-  meta_description: "HörBär hilft Familien, schnell passende und kindgerechte Hörspiele in Apple Music zu finden und nahtlos weiterzuhören."
+  meta_description: "Weniger Suchstress im Familienalltag: HörBär findet in Apple Music schnell passende, kindgerechte Hörspiele und spielt nahtlos weiter."
   hero_headline: "HörBär"
-  hero_subline: "Kindgerechte Hörspiele in Apple Music entdecken, sicher auswählen und Folge für Folge entspannt weiterhören."
-  app_price: "Im App Store ansehen"
-  cta_note: "Direkt im App Store verfügbar."
+  hero_subline: "Entdecke zahllose bekannte und neue kindgerechte Hörspiele. Höre ohne Unterbrechung weiter.*"
+  hero_footnote: "* benötigt ein  Music Abo"
   app_icon_alt: "HörBär App-Icon"
   screenshot_alt: "Screenshot der HörBär-App"
   video_aria_label: "Vorschauvideo der HörBär-App"
@@ -12,22 +11,22 @@ de:
   features:
     - icon: "music"
       title: "Tausende Hörspiele mit Apple Music"
-      description: "Finde zahlreiche kinderfreundliche Hörspiele direkt in Apple Music - ohne zusätzlichen Hörspiel-Dienst."
+      description: "Nutze euer bestehendes Apple-Music-Abo und entdecke sofort tausende kindgerechte Hörspiele."
     - icon: "search"
       title: "Kindersichere Auswahl"
-      description: "Kuratiert für Familien: Inhalte, die für Kinder geeignet sind, klar sortiert und einfach auffindbar."
+      description: "Altersgerechte Filter und klare Kategorien sparen Zeit und geben Sicherheit bei jeder Auswahl."
     - icon: "play-circle"
       title: "Nahtlos weiterhören"
-      description: "Setze Geschichten genau dort fort, wo ihr aufgehört habt - zuhause und unterwegs."
+      description: "HörBär merkt sich die letzte Stelle, damit dein Kind jederzeit ohne Frust weiterhören kann."
     - icon: "heart"
       title: "Favoriten im Blick"
-      description: "Merke Lieblingsserien und springe schnell zu den Inhalten, die dein Kind am meisten hört."
+      description: "Speichere Lieblingsserien mit einem Tipp und starte die nächste Folge in Sekunden."
     - icon: "bell"
       title: "Neue Folgen mitbekommen"
-      description: "HörBär informiert dich, sobald bei gespeicherten Serien neue Episoden verfügbar sind."
+      description: "Erhalte automatisch Hinweise auf neue Episoden und verpasst keine Lieblingsfolge mehr."
     - icon: "child"
       title: "Kinderleicht bedienbar"
-      description: "Eine klare Oberfläche mit großen Bedienelementen für entspanntes Hören im Familienalltag."
+      description: "Große, übersichtliche Bedienelemente machen die App sofort verständlich, auch im hektischen Alltag."
   footer:
     built_by: "Entwickelt von"
     changelog: "Neuigkeiten"
@@ -38,11 +37,10 @@ de:
 
 en:
   page_title: "HoerBaer - Audio Drama App for Kids"
-  meta_description: "HoerBaer helps families find child-safe audio dramas in Apple Music and continue listening seamlessly."
+  meta_description: "Less search stress for families: HoerBaer finds kid-friendly audio dramas in Apple Music fast and resumes playback seamlessly."
   hero_headline: "HoerBaer"
-  hero_subline: "Discover child-safe audio dramas in Apple Music, pick content with confidence, and continue story by story."
-  app_price: "View on the App Store"
-  cta_note: "Available on the App Store."
+  hero_subline: "Discover countless familiar and new kid-friendly audio dramas. Keep listening without interruptions.*"
+  hero_footnote: "* requires an Apple Music subscription"
   app_icon_alt: "HoerBaer app icon"
   screenshot_alt: "Screenshot of the HoerBaer app"
   video_aria_label: "Video preview of the HoerBaer app"
@@ -50,22 +48,22 @@ en:
   features:
     - icon: "music"
       title: "Thousands of stories with Apple Music"
-      description: "Find a broad catalog of kid-friendly audio dramas in Apple Music without adding another audio subscription."
+      description: "Use your existing Apple Music subscription and instantly access thousands of kid-friendly audio dramas."
     - icon: "search"
       title: "Child-safe discovery"
-      description: "Curated for families: suitable content, clearly structured, and easy to find."
+      description: "Age-appropriate filters and clear categories save time and make every choice feel safer."
     - icon: "play-circle"
       title: "Continue seamlessly"
-      description: "Resume stories exactly where your child stopped - at home or on the go."
+      description: "HoerBaer remembers the exact position so your child can continue listening without frustration."
     - icon: "heart"
       title: "Favorites at a glance"
-      description: "Save favorite series and jump back to them in one tap."
+      description: "Save favorite series in one tap and jump to the next episode in seconds."
     - icon: "bell"
       title: "New episode alerts"
-      description: "Get notified when new episodes are released for your saved series."
+      description: "Get automatic alerts for new episodes so no favorite story gets missed."
     - icon: "child"
       title: "Easy for families"
-      description: "A clean interface with simple controls designed for everyday family use."
+      description: "Large, clear controls make the app instantly understandable, even during busy family routines."
   footer:
     built_by: "Built by"
     changelog: "Changelog"
