Add localized press page and media assets

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -3,9 +3,9 @@ de:
   meta_description: "Weniger Suchstress im Familienalltag: HörBär findet in Apple Music schnell passende, kindgerechte Hörspiele und spielt nahtlos weiter."
   hero_headline: "Mehr hören. Weniger zahlen. Sicher bleiben."
   hero_subline: "Hörbox-Feeling auf dem iPhone - gemacht für Kinder und Familien.*"
-  hero_footnote: "* Benötigt ein  Music Abo"
+  hero_footnote: "* Benötigt ein Apple-Music-Abo"
   app_icon_alt: "HörBär App-Icon"
-  screenshot_alt: "Screenshot der HörBär-App"
+  screenshot_alt: "Ansicht der HörBär-App"
   video_aria_label: "Vorschauvideo der HörBär-App"
   appstore_badge_alt: "Im App Store laden"
   language_picker_aria: "Sprache wählen"
@@ -13,7 +13,7 @@ de:
   features:
     - icon: "euro-sign"
       title: "Mehr hören, weniger zahlen"
-      description: "Nutzt die zahllosen Hörspiele im  Music Abo anstatt einzelne Hörspielträger zu kaufen."
+      description: "Nutzt die zahllosen Hörspiele im Apple-Music-Abo anstatt einzelne Hörspielträger zu kaufen."
     - icon: "lock"
       title: "Sichere iPhone Nutzung"
       description: "Mit dem \"Geführten Zugriff\" bleiben Kinder immer innerhalb der HörBär App."
@@ -31,14 +31,14 @@ de:
       description: "Große, übersichtliche Bedienelemente machen die App sofort verständlich."
   footer:
     built_by: "Entwickelt von"
-    changelog: "Neuigkeiten"
+    changelog: "Changelog"
     privacy: "Datenschutzerklärung"
     terms: "AGB"
     imprint: "Impressum"
     switch_language: "English"
   press:
     heading: "Über HörBär"
-    intro: "HörBär hilft Familien, in Apple Music schnell passende, kinderfreundliche Hörspiele zu finden. Weil die App auf dem bestehenden Streaming-Abo aufsetzt, entfallen zusätzliche Einzelkäufe pro Hörspiel. Mit dem Geführten Zugriff kann das iPhone wie eine sichere Hörbox ohne zusätzliche Hardware genutzt werden - mit Zugriff nur auf HörBär."
+    intro: "HörBär hilft Familien, schnell und unkompliziert passende, kindgerechte Hörspiele in Apple Music zu finden. Da die App auf einem bestehenden Apple-Music-Abo aufsetzt, entfallen zusätzliche Einzelkäufe pro Titel. Mit dem Geführten Zugriff lässt sich das iPhone als sichere Hörbox nutzen - mit Zugriff nur auf HörBär."
     sections:
       kit: "Press Kit"
       facts: "Kurzprofil"
@@ -47,7 +47,7 @@ de:
       images: "Medien-Assets"
       contact: "Pressekontakt"
     audience_heading: "Für wen ist diese App?"
-    audience_text: "HörBär ist für Familien gedacht, die schnell passende Hörspiele finden möchten, ohne lange zu suchen. Besonders im Alltag mit Kindern hilft die App mit klaren Kategorien und einfacher Bedienung."
+    audience_text: "HörBär richtet sich an Familien, die kindgerechte Hörspiele schnell finden möchten - zu Hause und unterwegs. Statt von einer separaten Hörbox abhängig zu sein, reicht ein iPhone; mit dem Geführten Zugriff bleibt die Nutzung auf HörBär beschränkt und damit sicher für Kinder. Da die App das bestehende Apple-Music-Abo nutzt, entfallen zusätzliche Einzelkäufe pro Hörspiel und damit laufende Zusatzkosten."
     maker_heading: "Wer entwickelt HörBär?"
     maker_text: "HörBär wird von Ben Rudhart entwickelt. Der Fokus liegt auf einer ruhigen, kindgerechten Hörerfahrung für Familien."
     questions_heading: "Fragen? Melde dich gern."
@@ -81,14 +81,13 @@ de:
         value: "HörBär"
       - label: "Kategorie"
         value: "Kinder und Familie"
-    summary_text: "HörBär nutzt das bestehende Apple-Music-Abo von Familien, reduziert Kosten durch entfallende Einzelkäufe pro Hörspiel und unterstützt mit Guided Access einen abgesicherten Hörmodus."
+    summary_text: "HörBär nutzt das bestehende Apple-Music-Abo von Familien, reduziert Kosten durch entfallende Einzelkäufe pro Hörspiel und unterstützt mit dem Geführten Zugriff einen abgesicherten Hörmodus."
     features_list:
-      - "Nutzung des bestehenden Apple-Music-Abos statt Einzelkauf pro Hörspiel"
-      - "Geführter Zugriff: Das iPhone bleibt auf HörBär beschränkt, Kinder oder Dritte können nur die App nutzen"
-      - "Kindgerechte Hörspiel-Suche mit klaren Kategorien"
-      - "Favoriten und zuletzt gehörte Inhalte schnell wiederfinden"
-      - "Benachrichtigungen bei neuen Folgen gespeicherter Serien"
-      - "Reduzierte, kinderfreundliche Bedienoberfläche"
+      - "Bestehendes Apple-Music-Abo statt Einzelkäufen pro Hörspiel"
+      - "iPhone statt separater Hörbox - zu Hause und unterwegs"
+      - "Geführter Zugriff für einen sicheren Hörmodus für Kinder"
+      - "Kindgerechte Suche mit klaren Kategorien"
+      - "Favoriten, zuletzt gehört und neue Folgen auf einen Blick"
     image_alt_1: "HörBär Screenshot 1"
     image_alt_2: "HörBär Screenshot 2"
     email_label: "E-Mail"
@@ -100,14 +99,28 @@ de:
     app_name_label: "App Name"
     website_label: "Website"
     media_assets:
-      ios_01_alt: "iOS Screenshot 1"
-      ios_01_caption: "HörBär iOS Screenshot 1"
-      ios_02_alt: "iOS Screenshot 2"
-      ios_02_caption: "HörBär iOS Screenshot 2"
-      ipad_01_alt: "iPad Screenshot 1"
-      ipad_01_caption: "HörBär iPad Screenshot 1"
-      ipad_02_alt: "iPad Screenshot 2"
-      ipad_02_caption: "HörBär iPad Screenshot 2"
+      home_alt: "HörBär Startseite"
+      home_caption: "HörBär Home"
+      favorites_alt: "HörBär Lieblinge"
+      favorites_caption: "HörBär Lieblinge"
+      categories_alt: "HörBär Kategorien"
+      categories_caption: "HörBär Kategorien"
+      detective_alt: "HörBär Detektivgeschichten"
+      detective_caption: "HörBär Detektivgeschichten"
+      player_1_alt: "HörBär Player Ansicht 1"
+      player_1_caption: "HörBär Player 1"
+      player_2_alt: "HörBär Player Ansicht 2"
+      player_2_caption: "HörBär Player 2"
+      ipad_home_alt: "HörBär iPad Startseite"
+      ipad_home_caption: "HörBär iPad Home"
+      ipad_favorites_alt: "HörBär iPad Lieblinge"
+      ipad_favorites_caption: "HörBär iPad Lieblinge"
+      ipad_categories_alt: "HörBär iPad Kategorien"
+      ipad_categories_caption: "HörBär iPad Kategorien"
+      ipad_detective_alt: "HörBär iPad Kategorien und Detektivgeschichten"
+      ipad_detective_caption: "HörBär iPad Detektivgeschichten"
+      ipad_player_alt: "HörBär iPad Player"
+      ipad_player_caption: "HörBär iPad Player"
       icon_alt: "HörBär App-Icon"
       icon_caption: "HörBär App-Icon"
 
@@ -116,9 +129,9 @@ en:
   meta_description: "Less search stress for families: HoerBaer finds kid-friendly audio dramas in Apple Music fast and resumes playback seamlessly."
   hero_headline: "Listen more. Spend less. Stay safe."
   hero_subline: "Audio box feel on iPhone - no extra hardware.*"
-  hero_footnote: "* Requires a  Music subscription"
+  hero_footnote: "* Requires an Apple Music subscription"
   app_icon_alt: "HoerBaer app icon"
-  screenshot_alt: "Screenshot of the HoerBaer app"
+  screenshot_alt: "HoerBaer app view"
   video_aria_label: "Video preview of the HoerBaer app"
   appstore_badge_alt: "Download on the App Store"
   language_picker_aria: "Select language"
@@ -126,7 +139,7 @@ en:
   features:
     - icon: "euro-sign"
       title: "More stories, fewer extra costs"
-      description: "Use the countless audio dramas in your  Music subscription instead of buying individual titles."
+      description: "Use the countless audio dramas in your Apple Music subscription instead of buying individual titles."
     - icon: "lock"
       title: "Safe iPhone usage"
       description: "With \"Guided Access\" kids always stay within the HoerBaer app."
@@ -151,7 +164,7 @@ en:
     switch_language: "Deutsch"
   press:
     heading: "About HoerBaer"
-    intro: "HoerBaer helps families quickly find suitable child-friendly audio dramas in Apple Music. By building on an existing streaming subscription, families avoid per-title purchases. With Apple's Guided Access, the iPhone can be used like a dedicated audio box with access limited to HoerBaer."
+    intro: "HoerBaer helps families quickly and easily find suitable, child-friendly audio dramas in Apple Music. Because the app builds on an existing Apple Music subscription, there is no need for additional per-title purchases. With Apple's Guided Access, the iPhone can be used as a safe audio box with access limited to HoerBaer."
     sections:
       kit: "Press Kit"
       facts: "Quick Facts"
@@ -160,7 +173,7 @@ en:
       images: "Media Assets"
       contact: "Press Contact"
     audience_heading: "Who Is This App For?"
-    audience_text: "HoerBaer is built for families who want to quickly find suitable audio dramas without endless searching. Its clear categories and simple controls are designed for everyday family use."
+    audience_text: "HoerBaer is built for families who want to find child-friendly audio dramas quickly, at home and on the go. Instead of depending on a separate audio box, an iPhone is enough; with Guided Access, usage stays limited to HoerBaer and remains safe for kids. Because the app uses an existing Apple Music subscription, additional per-title purchases and ongoing extra costs are avoided."
     maker_heading: "Who Makes HoerBaer?"
     maker_text: "HoerBaer is made by Ben Rudhart, with a focus on a calm and child-friendly listening experience for families."
     questions_heading: "Questions? Reach Out."
@@ -202,12 +215,11 @@ en:
         value: "App Store"
     summary_text: "HoerBaer builds on families' existing Apple Music subscriptions, reduces costs by avoiding per-title purchases, and supports a safety-focused listening mode with Guided Access."
     features_list:
-      - "Use an existing Apple Music subscription instead of buying stories one by one"
-      - "Guided Access can keep the iPhone limited to HoerBaer so kids or others can only use the app"
-      - "Child-safe search with clear categories"
-      - "Fast access to favorites and recently played stories"
-      - "Alerts when new episodes are available"
-      - "Clean and family-friendly interface"
+      - "Use an existing Apple Music subscription instead of per-title purchases"
+      - "Use an iPhone instead of a separate audio box, at home and on the go"
+      - "Guided Access provides a safe listening mode for kids"
+      - "Child-friendly search with clear categories"
+      - "Favorites, recently played, and new episodes at a glance"
     image_alt_1: "HoerBaer screenshot 1"
     image_alt_2: "HoerBaer screenshot 2"
     email_label: "Email"
@@ -219,13 +231,27 @@ en:
     app_name_label: "App Name"
     website_label: "Website"
     media_assets:
-      ios_01_alt: "iOS screenshot 1"
-      ios_01_caption: "HoerBaer iOS screenshot 1"
-      ios_02_alt: "iOS screenshot 2"
-      ios_02_caption: "HoerBaer iOS screenshot 2"
-      ipad_01_alt: "iPad screenshot 1"
-      ipad_01_caption: "HoerBaer iPad screenshot 1"
-      ipad_02_alt: "iPad screenshot 2"
-      ipad_02_caption: "HoerBaer iPad screenshot 2"
+      home_alt: "HoerBaer home view"
+      home_caption: "HoerBaer Home"
+      favorites_alt: "HoerBaer favorites view"
+      favorites_caption: "HoerBaer Favorites"
+      categories_alt: "HoerBaer categories view"
+      categories_caption: "HoerBaer Categories"
+      detective_alt: "HoerBaer detective stories view"
+      detective_caption: "HoerBaer Detective Stories"
+      player_1_alt: "HoerBaer player view 1"
+      player_1_caption: "HoerBaer Player 1"
+      player_2_alt: "HoerBaer player view 2"
+      player_2_caption: "HoerBaer Player 2"
+      ipad_home_alt: "HoerBaer iPad home view"
+      ipad_home_caption: "HoerBaer iPad Home"
+      ipad_favorites_alt: "HoerBaer iPad favorites view"
+      ipad_favorites_caption: "HoerBaer iPad Favorites"
+      ipad_categories_alt: "HoerBaer iPad categories view"
+      ipad_categories_caption: "HoerBaer iPad Categories"
+      ipad_detective_alt: "HoerBaer iPad categories and detective stories view"
+      ipad_detective_caption: "HoerBaer iPad Detective Stories"
+      ipad_player_alt: "HoerBaer iPad player view"
+      ipad_player_caption: "HoerBaer iPad Player"
       icon_alt: "HoerBaer app icon"
       icon_caption: "HoerBaer app icon"
