--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -1,32 +1,34 @@
 de:
   page_title: "HörBär - Hörspiel-App für Kinder"
   meta_description: "Weniger Suchstress im Familienalltag: HörBär findet in Apple Music schnell passende, kindgerechte Hörspiele und spielt nahtlos weiter."
-  hero_headline: "HörBär"
-  hero_subline: "Entdecke zahllose bekannte und neue kindgerechte Hörspiele. Höre ohne Unterbrechung weiter.*"
-  hero_footnote: "* benötigt ein  Music Abo"
+  hero_headline: "Mehr hören. Weniger zahlen. Sicher bleiben."
+  hero_subline: "Hörbox-Feeling auf dem iPhone - gemacht für Kinder und Familien.*"
+  hero_footnote: "* Benötigt ein  Music Abo"
   app_icon_alt: "HörBär App-Icon"
   screenshot_alt: "Screenshot der HörBär-App"
   video_aria_label: "Vorschauvideo der HörBär-App"
   appstore_badge_alt: "Im App Store laden"
+  language_picker_aria: "Sprache wählen"
+  language_picker_title: "Sprache"
   features:
-    - icon: "music"
-      title: "Tausende Hörspiele mit Apple Music"
-      description: "Nutzt euer bestehendes Apple-Music-Abo und entdeckt sofort tausende kindgerechte Hörspiele."
-    - icon: "search"
-      title: "Kindersichere Auswahl"
-      description: "Altersgerechte Filter und klare Kategorien sparen Zeit und geben Sicherheit bei jeder Auswahl."
+    - icon: "euro-sign"
+      title: "Mehr hören, weniger zahlen"
+      description: "Nutzt die zahllosen Hörspiele im  Music Abo anstatt einzelne Hörspielträger zu kaufen."
+    - icon: "lock"
+      title: "Sichere iPhone Nutzung"
+      description: "Mit dem \"Geführten Zugriff\" bleiben Kinder immer innerhalb der HörBär App."
     - icon: "play-circle"
       title: "Nahtlos weiterhören"
-      description: "HörBär merkt sich die letzte Stelle, damit dein Kind jederzeit ohne Frust weiterhören kann."
+      description: "Setze ein Hörspiel jederzeit dort fort, wo du zuletzt aufgehört hast."
     - icon: "heart"
       title: "Favoriten im Blick"
-      description: "Speichere Lieblingsserien mit einem Tipp und starte die nächste Folge in Sekunden."
+      description: "Speichere Lieblingsserien mit einem Tipp und finde immer die nächste Folge."
     - icon: "bell"
-      title: "Neue Folgen mitbekommen"
-      description: "Werde automatisch für neue Episoden benachrichtigt und verpasst keine Lieblingsfolge mehr."
+      title: "Automatische Mittelungen"
+      description: "Du wirst benachrichtigt, wenn eine neue Folge der Lieblingsserie verfügbar ist."
     - icon: "child"
       title: "Kinderleicht bedienbar"
-      description: "Große, übersichtliche Bedienelemente machen die App sofort verständlich, auch im hektischen Alltag."
+      description: "Große, übersichtliche Bedienelemente machen die App sofort verständlich."
   footer:
     built_by: "Entwickelt von"
     changelog: "Neuigkeiten"
@@ -34,36 +36,112 @@ de:
     terms: "AGB"
     imprint: "Impressum"
     switch_language: "English"
+  press:
+    heading: "Über HörBär"
+    intro: "HörBär hilft Familien, in Apple Music schnell passende, kinderfreundliche Hörspiele zu finden. Weil die App auf dem bestehenden Streaming-Abo aufsetzt, entfallen zusätzliche Einzelkäufe pro Hörspiel. Mit dem Geführten Zugriff kann das iPhone wie eine sichere Hörbox ohne zusätzliche Hardware genutzt werden - mit Zugriff nur auf HörBär."
+    sections:
+      kit: "Press Kit"
+      facts: "Kurzprofil"
+      summary: "Produktbeschreibung"
+      features: "Kernfunktionen"
+      images: "Medien-Assets"
+      contact: "Pressekontakt"
+    audience_heading: "Für wen ist diese App?"
+    audience_text: "HörBär ist für Familien gedacht, die schnell passende Hörspiele finden möchten, ohne lange zu suchen. Besonders im Alltag mit Kindern hilft die App mit klaren Kategorien und einfacher Bedienung."
+    maker_heading: "Wer entwickelt HörBär?"
+    maker_text: "HörBär wird von Ben Rudhart entwickelt. Der Fokus liegt auf einer ruhigen, kindgerechten Hörerfahrung für Familien."
+    questions_heading: "Fragen? Melde dich gern."
+    questions_text: "Bei Fragen oder für weitere Informationen kontaktiere uns gern per E-Mail unter"
+    media_intro: "Du kannst alle Bilder unten frei für redaktionelle Zwecke nutzen."
+    media_bulk_download_prefix: "Zusätzlich kannst du alle Assets gesammelt"
+    media_bulk_download_link_text: "hier"
+    media_bulk_download_suffix: " herunterladen."
+    media_tabs_label: "Kategorien für Medien-Assets"
+    media_tabs:
+      all: "Alle"
+      ios: "iOS"
+      ipad: "iPad"
+      icon: "Icon"
+    download_label: "Herunterladen"
+    download_button_text: "Download"
+    download_filename_prefix: "hoerbaer-asset"
+    qr_button_show: "QR Code zeigen"
+    qr_image_alt: "QR Code zur HörBär App im App Store"
+    qr_hint: "Code scannen für App-Store-Link."
+    kit_intro: "Wenn du über HörBär berichten möchtest, kannst du dieses Press Kit gern nutzen. Es enthält Screenshots, das App-Icon und Beschreibungstexte zur App."
+    kit_contact_intro: "Für weitere Fragen oder Informationen kontaktiere uns per E-Mail unter"
+    kit_contact_mastodon: "oder über Mastodon unter"
+    kit_mastodon_handle: "@hoerbaer"
+    links:
+      presskit: "Pressekit herunterladen"
+      appstore: "App Store"
+      contact: "Kontakt"
+    facts:
+      - label: "App Name"
+        value: "HörBär"
+      - label: "Kategorie"
+        value: "Kinder und Familie"
+    summary_text: "HörBär nutzt das bestehende Apple-Music-Abo von Familien, reduziert Kosten durch entfallende Einzelkäufe pro Hörspiel und unterstützt mit Guided Access einen abgesicherten Hörmodus."
+    features_list:
+      - "Nutzung des bestehenden Apple-Music-Abos statt Einzelkauf pro Hörspiel"
+      - "Geführter Zugriff: Das iPhone bleibt auf HörBär beschränkt, Kinder oder Dritte können nur die App nutzen"
+      - "Kindgerechte Hörspiel-Suche mit klaren Kategorien"
+      - "Favoriten und zuletzt gehörte Inhalte schnell wiederfinden"
+      - "Benachrichtigungen bei neuen Folgen gespeicherter Serien"
+      - "Reduzierte, kinderfreundliche Bedienoberfläche"
+    image_alt_1: "HörBär Screenshot 1"
+    image_alt_2: "HörBär Screenshot 2"
+    email_label: "E-Mail"
+    release_date_label: "Erscheinungsdatum"
+    release_date_value: "7. November 2025"
+    release_date_loading: "Wird geladen..."
+    developer_label: "Entwickler"
+    contact_label: "Kontakt"
+    app_name_label: "App Name"
+    website_label: "Website"
+    media_assets:
+      ios_01_alt: "iOS Screenshot 1"
+      ios_01_caption: "HörBär iOS Screenshot 1"
+      ios_02_alt: "iOS Screenshot 2"
+      ios_02_caption: "HörBär iOS Screenshot 2"
+      ipad_01_alt: "iPad Screenshot 1"
+      ipad_01_caption: "HörBär iPad Screenshot 1"
+      ipad_02_alt: "iPad Screenshot 2"
+      ipad_02_caption: "HörBär iPad Screenshot 2"
+      icon_alt: "HörBär App-Icon"
+      icon_caption: "HörBär App-Icon"
 
 en:
   page_title: "HoerBaer - Audio Drama App for Kids"
   meta_description: "Less search stress for families: HoerBaer finds kid-friendly audio dramas in Apple Music fast and resumes playback seamlessly."
-  hero_headline: "HoerBaer"
-  hero_subline: "Discover countless familiar and new kid-friendly audio dramas. Keep listening without interruptions.*"
-  hero_footnote: "* requires an Apple Music subscription"
+  hero_headline: "Listen more. Spend less. Stay safe."
+  hero_subline: "Audio box feel on iPhone - no extra hardware.*"
+  hero_footnote: "* Requires a  Music subscription"
   app_icon_alt: "HoerBaer app icon"
   screenshot_alt: "Screenshot of the HoerBaer app"
   video_aria_label: "Video preview of the HoerBaer app"
   appstore_badge_alt: "Download on the App Store"
+  language_picker_aria: "Select language"
+  language_picker_title: "Language"
   features:
-    - icon: "music"
-      title: "Thousands of stories with Apple Music"
-      description: "Use your existing Apple Music subscription and instantly access thousands of kid-friendly audio dramas."
-    - icon: "search"
-      title: "Child-safe discovery"
-      description: "Age-appropriate filters and clear categories save time and make every choice feel safer."
+    - icon: "euro-sign"
+      title: "More stories, fewer extra costs"
+      description: "Use the countless audio dramas in your  Music subscription instead of buying individual titles."
+    - icon: "lock"
+      title: "Safe iPhone usage"
+      description: "With \"Guided Access\" kids always stay within the HoerBaer app."
     - icon: "play-circle"
       title: "Continue seamlessly"
-      description: "HoerBaer remembers the exact position so your child can continue listening without frustration."
+      description: "Continue any audio drama exactly where you left off."
     - icon: "heart"
       title: "Favorites at a glance"
-      description: "Save favorite series in one tap and jump to the next episode in seconds."
+      description: "Save favorite series in one tap and always find the next episode."
     - icon: "bell"
-      title: "New episode alerts"
-      description: "Get automatic alerts for new episodes so no favorite story gets missed."
+      title: "Automatic notifications"
+      description: "You get notified when a new episode of a favorite series is available."
     - icon: "child"
       title: "Easy for families"
-      description: "Large, clear controls make the app instantly understandable, even during busy family routines."
+      description: "Large, clear controls make the app instantly understandable."
   footer:
     built_by: "Built by"
     changelog: "Changelog"
@@ -71,3 +149,83 @@ en:
     terms: "Terms and Conditions"
     imprint: "Imprint"
     switch_language: "Deutsch"
+  press:
+    heading: "About HoerBaer"
+    intro: "HoerBaer helps families quickly find suitable child-friendly audio dramas in Apple Music. By building on an existing streaming subscription, families avoid per-title purchases. With Apple's Guided Access, the iPhone can be used like a dedicated audio box with access limited to HoerBaer."
+    sections:
+      kit: "Press Kit"
+      facts: "Quick Facts"
+      summary: "Product Summary"
+      features: "Core Features"
+      images: "Media Assets"
+      contact: "Press Contact"
+    audience_heading: "Who Is This App For?"
+    audience_text: "HoerBaer is built for families who want to quickly find suitable audio dramas without endless searching. Its clear categories and simple controls are designed for everyday family use."
+    maker_heading: "Who Makes HoerBaer?"
+    maker_text: "HoerBaer is made by Ben Rudhart, with a focus on a calm and child-friendly listening experience for families."
+    questions_heading: "Questions? Reach Out."
+    questions_text: "For additional questions or information, please contact us by email at"
+    media_intro: "Feel free to use any of the images below for editorial coverage."
+    media_bulk_download_prefix: "Additionally, you can download all of these at once right"
+    media_bulk_download_link_text: "here"
+    media_bulk_download_suffix: "."
+    media_tabs_label: "Media Asset Categories"
+    media_tabs:
+      all: "All"
+      ios: "iOS"
+      ipad: "iPad"
+      icon: "Icon"
+    download_label: "Download"
+    download_button_text: "Download"
+    download_filename_prefix: "hoerbaer-asset"
+    qr_button_show: "Show QR code"
+    qr_image_alt: "QR code linking to HoerBaer in the App Store"
+    qr_hint: "Scan code for App Store link."
+    kit_intro: "If you would like to cover HoerBaer, please feel free to use this press kit. It includes screenshots, the app icon, and app descriptions."
+    kit_contact_intro: "For additional questions or information, please contact us by email at"
+    kit_contact_mastodon: "or via Mastodon at"
+    kit_mastodon_handle: "@hoerbaer"
+    links:
+      presskit: "Download press kit"
+      appstore: "App Store"
+      contact: "Contact"
+    facts:
+      - label: "Product name"
+        value: "HoerBaer"
+      - label: "Category"
+        value: "Kids and Family"
+      - label: "Platform"
+        value: "iOS"
+      - label: "Availability"
+        value: "DACH region"
+      - label: "Business model"
+        value: "App Store"
+    summary_text: "HoerBaer builds on families' existing Apple Music subscriptions, reduces costs by avoiding per-title purchases, and supports a safety-focused listening mode with Guided Access."
+    features_list:
+      - "Use an existing Apple Music subscription instead of buying stories one by one"
+      - "Guided Access can keep the iPhone limited to HoerBaer so kids or others can only use the app"
+      - "Child-safe search with clear categories"
+      - "Fast access to favorites and recently played stories"
+      - "Alerts when new episodes are available"
+      - "Clean and family-friendly interface"
+    image_alt_1: "HoerBaer screenshot 1"
+    image_alt_2: "HoerBaer screenshot 2"
+    email_label: "Email"
+    release_date_label: "Release date"
+    release_date_value: "November 7, 2025"
+    release_date_loading: "Loading..."
+    developer_label: "Developer"
+    contact_label: "Contact"
+    app_name_label: "App Name"
+    website_label: "Website"
+    media_assets:
+      ios_01_alt: "iOS screenshot 1"
+      ios_01_caption: "HoerBaer iOS screenshot 1"
+      ios_02_alt: "iOS screenshot 2"
+      ios_02_caption: "HoerBaer iOS screenshot 2"
+      ipad_01_alt: "iPad screenshot 1"
+      ipad_01_caption: "HoerBaer iPad screenshot 1"
+      ipad_02_alt: "iPad screenshot 2"
+      ipad_02_caption: "HoerBaer iPad screenshot 2"
+      icon_alt: "HoerBaer app icon"
+      icon_caption: "HoerBaer app icon"
